# someedition

./: CMakeLists.txt  FilterableImage.cpp  FilterableImage.h  README.md  main.cpp  main.qml
src/: CMakeLists.txt  FilterableImage.cpp  FilterableImage.h
test/: CMakeLists.txt  FilterableImageTest.cpp  FilterableImageTest.h  testmain.cpp
